# clo3d-mcp

./: .gitignore  AUDIT.md  LICENSE  README.md  conftest.py  protocol.md  pyproject.toml
.claude/skills/clo-patterns/: SKILL.md
clo_addon/: clo_mcp_listener.py  diagnose.py  diagnose_rest.py
clo_mcp/: __init__.py  clo_client.py  server.py
clo_plugin/: CMakeLists.txt  README.md  build.ps1  clo_api.h  clo_api_clo.cpp  clo_api_stub.cpp  clo_mcp_server.cpp  clo_mcp_server.h  clo_status_panel.cpp  clo_status_panel.h  crash.checkpoint  install.ps1  plugin_main.cpp  standalone_main.cpp  uninstall.ps1
scripts/: draft_skirt.py  probe_outlines.py
tests/: test_clo_client.py
