[project]
name = "clo3d-mcp"
version = "0.1.0"
description = "MCP server that drives CLO3D via its built-in Python API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
clo3d-mcp = "clo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clo_mcp"]
